fix: Change error folders in answerphone

--- a/src/components/SettingsContainer/SettingsAnswerphone/settings-answerphone-folders.scss
+++ b/src/components/SettingsContainer/SettingsAnswerphone/settings-answerphone-folders.scss
@@ -26,6 +26,7 @@
         margin-top: 16px;
     }
     &__main{
+        background: #1D1D35;
         &_title{
             color: #CFCFE4;
             font-size: 14px;
