feat: amo online chats create

--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -4,6 +4,10 @@
   ::-webkit-scrollbar {
     display: none;
   }
+  &__chats{
+    display: flex;
+    align-items: center;
+  }
  &__popup{
    display: flex;
    justify-content: space-between;
@@ -21,6 +25,7 @@ margin-bottom: 8px;
  }
  &__img{
    display: flex;
+   margin-left: 50px;
  }
  &__row_start {
   justify-content:space-between; 
@@ -90,6 +95,9 @@ margin-bottom: 8px;
   padding: 40px 0px 31px;
   border-bottom: 1px solid var(--separator-color);
   width: initial;
+  .settings-integrations-form__row{
+    max-width: 1092px;
+  }
 }
 .settings-integrations-form__header {
   font-style: normal;
@@ -142,15 +150,15 @@ margin-bottom: 8px;
 
 }
 .settongs-integrations-form__input-group {
-  width: 20%;
+  width: 100%;
 
 }
 .settings-integrations-form__row_width {
-  justify-content:space-between; 
+  justify-content:flex-start; 
   display: flex;
   align-items: flex-end;
-  width: 68.2%;
-    max-width: 68.2%;
+  width: 100%;
+    max-width: 476px;
  
   &.settings-integrations-form__row_al-end {
     align-items: flex-end;
@@ -158,14 +166,16 @@ margin-bottom: 8px;
   &.settings-integrations-form__row_mt-26 {
     margin-top: 26px;
   }
-   @media (min-width: 1560px){
-  max-width: 960px;
-  width: 100%;
-}
-  
+//    @media (min-width: 1560px){
+//   max-width: 960px;
+//   width: 100%;
+// }
+  .settongs-integrations-form__input-group_max:first-of-type{
+    margin-right: 15px;
+  }
 }
 .settongs-integrations-form__input-group_max{
-  width: 40%;
+  width: 100%;
  
 }
 .settongs-integrations-form__input-group_max, .settongs-integrations-form__input-group{
@@ -176,7 +186,7 @@ margin-bottom: 8px;
     width: 100%;
   }
   &.settongs-integrations-form__input-group_mr-13 {
-    margin-right: 13px;
+    margin-right: 16px;
   }
 }
 .settongs-integrations-form__input-group_width{
@@ -252,7 +262,7 @@ margin-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 37px;
+  min-height: 36px;
   
   cursor: pointer;
   height: 100%;
@@ -266,7 +276,7 @@ margin-bottom: 8px;
     border-left: 1px solid #252544;
     height: 100%;
     padding-left: 10px;
-    min-width: 24px;
+    min-width: 26px;
   }
   &-svg_green{
     border-left: 1px solid #5EC075 !important;
@@ -280,6 +290,15 @@ margin-bottom: 8px;
     path{
       fill: #5EC075;
     }
+  }
+  &_default{
+    border-left: none!important;
+    padding-left: 0px !important;
+    padding-right: 8px;
+  }
+  &-channel{
+    display: flex;
+    align-items: center;
   }
 }
 &-list {
@@ -354,15 +373,15 @@ margin-bottom: 8px;
     position: relative;
     padding: 1px 0;
     cursor: pointer;
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      height: 1px;
-      width: 100%;
-      background: var(--green-color);
-    }
+    // &:after {
+    //   content: "";
+    //   position: absolute;
+    //   bottom: 0;
+    //   left: 0;
+    //   height: 1px;
+    //   width: 100%;
+    //   background: var(--green-color);
+    // }
   }
 }
 .settings-integrations-form__contributors {
@@ -457,10 +476,8 @@ margin-bottom: 8px;
   .settings-integrations-form__input_width{
   width: 68.5%;
   min-height: 37px;
-  max-width: 68.5% ;
-  @media (min-width:1560px) {
-    max-width:960px;
-  }
+  max-width: 476px ;
+  margin-right: 16px;
 }
 }
 .settings-integrations-form__select_active {
@@ -489,7 +506,7 @@ margin-bottom: 8px;
   margin-right: 0px;
 }
 .settongs-integrations-form__input-automessage{
-  width: 20%;
+  width: 100%;
   display: flex;
   align-items: flex-end;
   .settongs-integrations-form__input-group{
