fix: validate phone in dialogs

--- a/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
+++ b/src/components/SettingsContainer/SettingsIntegrations/settings-integrations-form.scss
@@ -96,7 +96,7 @@ margin-bottom: 8px;
   border-bottom: 1px solid var(--separator-color);
   width: initial;
   .settings-integrations-form__row{
-    max-width: 1092px;
+    // max-width: 1092px;
   }
 }
 .settings-integrations-form__header {
